# VevorWeatherbridge

./: .gitignore  .pre-commit-config.yaml  .rumdl.toml  Backlog.md  CLAUDE.md  DOCS.md  Dockerfile  README.md  TODO.md  build.json  docker-compose.yml  opencode.json  prek.toml  pyproject.toml  repository.yaml  requirements.txt  run.sh  sonar-project.properties  weatherstation.py
.claude/: ARCHITECTURE.md  MANIFEST.md  QUICKSTART.md  README.md  settings.toml.deprecated
.claude/hooks/: dockerfile_check.sh  ha_config_check.sh  post-edit-python.sh  post_edit_dispatch.sh  python_quality_check.sh  security_check.sh
.claude/skills/ha-addon-skill/: SKILL.md  run.sh
.claude/skills/python-ci-skill/: SKILL.md  run.sh
.claude/skills/security-scan-skill/: SKILL.md  run.sh
.devcontainer/: devcontainer.json
.github/: .release-please-manifest.json  DEPENDENCY_MANAGEMENT.md  RELEASE_NOTES_v0.1.6.md  RELEASE_NOTES_v0.1.7.md  RENOVATE_SETUP.md  SECURITY.md  dependabot.yml  release-please-config.json  renovate.json
.github/workflows/: README.md  actionlint.yml  build-addon.yml  ci.yml  dependency-review.yml  rebuild-nightly.yml  release-please.yml  release.yml  scorecard.yml  security-supply-chain.yml  update-dependencies.yml
archive/scripts/: clair-report.py
backlog/: config.yml
backlog/decisions/: decision-1 - Go-over-Rust-for-migration.md  decision-10 - FFmpeg-licensing-NOT-applicable.md  decision-2 - Add-on-approach-over-native-HA-integration.md  decision-3 - License-CC0-root-GPL-3.0-or-later-Go-EPL-2.0-EDL-1.0-paho.md  decision-4 - Docker-base-image-unpinned-tag-accepted-risk.md  decision-5 - Release-notes-keep-custom-changelog-over-auto-contributors.md  decision-6 - VS-Code-extensions-recommendations-only-via-extensions.json.md  decision-7 - pyproject.toml-kept-at-root.md  decision-8 - pre-commit-action-not-needed-as-GitHub-Action.md  decision-9 - Release-please-over-manual-releases.md
backlog/tasks/: task-1 - MQTT-auto-detection-end-to-end-test.md  task-10 - Fix-Go-time-parsing-bug-normalizeTimestamp.md  task-11 - Re-add-AppArmor-profile-with-Supervisor-API-support.md  task-12 - Implement-native-Go-fuzz-tests.md  task-13 - Add-state_class-to-all-MQTT-Discovery-sensors.md  task-14 - Inject-correct-version-via-ldflags.md  task-15 - Fix-Go-warnings-with-golangci-lint.md  task-16 - Add-Go-tests-to-CI-workflow.md  task-17 - Clean-up-RELEASE_NOTES-files-from-.github.md  task-18 - Remediate-CodeQL-security-findings.md  task-19 - Add-SPDX-license-headers-to-Go-source-files.md  task-2 - Add-icon.png-for-HA-add-on-store.md  task-20 - Convert-standalone-Docker-container-to-HA-Add-on.md  task-21 - Implement-Claude-Code-quality-harness.md  task-22 - Reorganize-dev-docs-into-structured-subdirectories.md  task-23 - Evaluate-and-select-security-SBOM-notices-pipeline-tools.md  task-23 - Migrate-von-pre-commit-zu-prek-Rust-basiert.md  task-24 - Fix-Quay.io-build-trigger-keeps-deactivating-should-only-fire-on-maintags.md  task-3 - Add-fuzz-tests-to-CI-pipeline.md  task-4 - Add-SPDX-header-verification-to-CI.md  task-5 - Revisit-Dockerfile-base-image-pinning.md  task-6 - Migrate-architecture-docs-from-.claude-into-dev-docs.md  task-7 - Remove-unused-Python-CI-references-from-harness.md  task-8 - Archive-dev-docs-prompts-or-remove-them.md  task-9 - Migrate-from-PythonGo-to-Go-only.md
dev-docs/: FUZZING_RESEARCH.md  README.md  REORGANIZATION_SUMMARY.md  go-rust-migration-analysis.md  homeassistant-integration-notes.md  project-consolidation-plan.md
dev-docs/conversion/: CONVERSION_COMPLETE.md  ICON_PLACEHOLDER.md  NEXT_SESSION_START.md  SESSION_SUMMARY.md  STARTNOTIZEN.md
dev-docs/github/: DEPENDENCY_MANAGEMENT.md  README.md  RELEASE_NOTES_CUSTOMIZATION.md  RENOVATE_SETUP.md
dev-docs/guides/: RELEASE-AUTOMATION.md  RELEASE_AUTOMATION.md  TESTING.md  VSCODE_WORKSPACE_EXTENSIONS.md
dev-docs/harness/: HARNESS_SUMMARY.md
dev-docs/prompts/: DEVCONTAINER_RESEARCH_PROMPT.md  GO_MIGRATION_START_PROMPT.md  VSCODE_EXTENSIONS_SKILL_PROMPT.md
docker/: Dockerfile.agentmemory  compose.llamacpp.yaml  compose.ollama.yaml
docker/config/: llama-swap.yaml
docker/scripts/: setup.sh
scripts/: check-ha-base-version.sh  gen-notice.py  notice-template.jinja
vevor-weatherbridge/: CHANGELOG.md  DOCS.md  Dockerfile  apparmor.txt  config.yaml  lovelace-windrose-example.yaml  pytest.ini  requirements.txt  run.sh  test_run_sh.py  test_weatherstation.py  weatherstation.py
vevor-weatherbridge-go/: CHANGELOG.md  DOCS.md  Dockerfile  apparmor.txt  build.json  compass.go  compass_test.go  config.go  config.yaml  convert.go  convert_test.go  go.mod  go.sum  handler.go  handler_test.go  main.go  mqtt.go  mqtt_test.go  project-attribution-git+github.com_lenucksi_VevorWeatherbridge$68cf224ed18d57164a54711983dfaf72921adfb3-1764672627291.md  run.sh  sensors.go  weather.go
vevor-weatherbridge-go/scripts/: clair-report.py
vevor-weatherbridge/tests/: __init__.py  conftest.py  test_conversions.py  test_endpoint.py  test_mqtt_callbacks.py  test_run_sh.py  test_wu_forwarding.py
(+26 files in other folders)
