[tool.poetry]
name = "vevor-weatherbridge"
version = "0.1.0"
description = "Weather Station to Home Assistant Relay"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "weatherstation.py"}]

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.0"
pytz = "^2025.2"
paho-mqtt = "^2.1.0"
requests = "^2.31.0"
dnspython = "^2.6.0"

[tool.poetry.group.dev.dependencies]
# Quality tools
ruff = "^0.14.0"
mypy = "^1.13.0"
bandit = "^1.7.10"
pip-audit = "^2.7.3"
semgrep = "^1.96.0"
yamllint = "^1.35.1"

# Type stubs
types-requests = "^2.31.0"
types-pytz = "^2024.1.0"

[tool.poetry.group.test.dependencies]
pytest = "^9.0.0"
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Ruff configuration
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "S",  # bandit
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "S104",  # binding to all interfaces (intentional for docker)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Start permissive, tighten later
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[tool.bandit]
exclude_dirs = ["/test", "/.venv", "/venv"]
skips = ["B404", "B603"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
