[project]
name = "vevor-weatherbridge"
version = "0.1.7"
description = "Weather Station to Home Assistant Relay"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "lenucksi" }]
keywords = ["home-assistant", "mqtt", "weather-station", "vevor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Flask",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
]

dependencies = [
    "flask>=3.0.0",
    "pytz>=2024.1",
    "paho-mqtt>=2.1.0",
    "requests>=2.31.0",
    "dnspython>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.4",
    "mypy>=1.13.0",
    "bandit>=1.7.10",
    "pip-audit>=2.7.3",
    "semgrep>=1.96.0",
    "yamllint>=1.35.1",
    "types-requests>=2.31.0",
    "types-pytz>=2024.1.0",
]
test = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.12.0",
]

[project.urls]
Homepage = "https://github.com/lenucksi/VevorWeatherbridge"
Repository = "https://github.com/lenucksi/VevorWeatherbridge"
Issues = "https://github.com/lenucksi/VevorWeatherbridge/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vevor-weatherbridge"]

[dependency-groups]
dev = [
    "ruff>=0.8.4",
    "mypy>=1.13.0",
    "bandit>=1.7.10",
    "pip-audit>=2.7.3",
    "semgrep>=1.96.0",
    "yamllint>=1.35.1",
    "types-requests>=2.31.0",
    "types-pytz>=2024.1.0",
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.12.0",
]

[tool.ruff]
# Ruff configuration
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # bandit
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "S104",  # binding to all interfaces (intentional for docker)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"**/tests/**" = ["S101"]  # Allow assert in tests

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Start permissive, tighten later
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv"]
skips = ["B404", "B603"]

[tool.pytest.ini_options]
testpaths = ["vevor-weatherbridge/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["vevor-weatherbridge"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
